--- a/style.css
+++ b/style.css
@@ -2,9 +2,47 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .container {
     max-width: 800px;
     margin: 0 auto;
+}
+
+.container.head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.container.head .title {
+    margin-bottom: 12px;
+    font-size: 36px;
+    color: blueviolet;
+}
+
+.container.head .input-todo {
+    padding: 6px 4px;
+    border-color: violet;
+}
+
+.container.body {
+    padding: 12px;
+}
+
+.done .todo {
+    text-decoration: line-through;
+}
+
+.container ul li {
+    user-select: none;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.container ul li .delete {
+    cursor: pointer;
 }
